--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,19 @@ body {
 label {
   color: #617c8a;
   display: block;
-  margin-bottom: 5px;
-  margin-top: 40px;
+  margin-bottom: 2%;
+  margin-top: 2%;
+}
+
+input::placeholder {
+  font-size: 1rem;
+  line-height: 100%;
 }
 
 input[type="number"] {
   border: 2px solid #c8dce2;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 1.5rem;
   padding: 8px 10px;
   width: 100%;
   box-sizing: border-box;
@@ -56,7 +61,7 @@ button:hover {
 
 p {
   color: #617c8a;
-  margin-top: 20px;
+  margin-top: 3%;
 }
 
 span {
@@ -102,7 +107,7 @@ footer {
   font-size: 1rem;
   font-family: "Great Vibes", cursive;
   font-weight: 600;
-  background-color: #c8dce2;
+  background-color: #a9cdd8;
 }
 
 #mensaje-error {
@@ -113,120 +118,6 @@ footer {
   text-align: center;
 }
 
-
-
-
-
-
-/* body {
-  background-color: #d9ead3;
-  font-family: Arial, sans-serif;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  padding: 5%;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0;
+.corazon-gif {
+  width: 5%;
 }
-
-.container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  box-sizing: border-box;
-  margin-left: 10%;
-  margin-right: 10%;
-}
-
-label {
-  color: #827d7d;
-  display: block;
-  margin-bottom: 5px;
-  margin-top: 40px;
-}
-
-input[type="number"] {
-  border: 2px solid #e6e1df;
-  border-radius: 5px;
-  font-size: 16px;
-  padding: 8px 10px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-button {
-  background-color: #94c8d7;
-  border: none;
-  border-radius: 20px;
-  color: white;
-  cursor: pointer;
-  font-size: 1.2rem;
-  font-weight: bold;
-  padding: 12px 24px;
-  text-transform: uppercase;
-  transition: background-color 0.3s;
-  margin: 20px 0;
-}
-
-button:hover {
-  background-color: #6fa9bb;
-}
-
-p {
-  color: #827d7d;
-  margin-top: 20px;
-}
-
-span {
-  color: #555;
-  font-weight: bold;
-}
-
-@media (min-width: 600px) {
-  .container {
-    padding: 40px;
-    margin-left: 10%;
-    margin-right: 10%;
-  }
-}
-header {
-  background-color: #f8f4f1;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.logo {
-  display: block;
-  margin: 0 auto;
-  max-width: 200px;
-  height: auto;
-}
-
-#borrar {
-  font-size: 1rem;
-  padding: 12px 24px;
-}
-
-footer {
-  position:fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  color: darkred;
-  text-align: center;
-  padding: 5px;
-  font-size: 1rem;
-  font-family: "Great Vibes", cursive;
-  font-weight: 600;
-  background-color: #555;
-}
-
-#mensaje-error {
-  color: red;
-  font-weight: bold;
-  margin-top: 10px;
-  font-size: 1rem;
-  text-align: center;
-} */
