--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ button:hover {
 p {
   color: #617c8a;
   margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 span {
@@ -104,6 +105,7 @@ footer {
   color: #4e4e4e;
   text-align: center;
   padding: 5px;
+  margin-top: 5%;
   font-size: 1rem;
   font-family: "Great Vibes", cursive;
   font-weight: 600;
