--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
   font-family: Arial, sans-serif;
   font-size: 1.5rem;
   line-height: 1.5;
-  padding: 5%;
+  padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin: 0;
+  margin: 5%;
 }
 
 .container {
@@ -73,8 +73,8 @@ span {
 @media (min-width: 600px) {
   .container {
     padding: 40px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
 
