--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,46 @@ footer {
 .corazon-gif {
   width: 2em;
 }
+
+.buttonIcon {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  /* width: 40px;
+  height: 40px; */
+  border-radius: 10%;
+  background-color: transparent;
+  border: 3px black;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.buttonIcon:hover {
+  background-color: #558d9b;
+}
+
+.buttonIcon img {
+  width: 80px;
+  height: 80px;
+}
+
+/* #buttonContainer {
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-inline: 5%;
+
+} */
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.buttonText {
+  color: #617c8a;
+  font-size: 1rem;
+  margin-top: 5px;
+}
