--- a/styles.css
+++ b/styles.css
@@ -128,9 +128,8 @@ footer {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  /* width: 40px;
-  height: 40px; */
-  border-radius: 10%;
+  width: 80px;
+  height: 80px;
   background-color: transparent;
   cursor: pointer;
   transition: background-color 0.3s;
